# carnine2

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build_linux.sh  build_pi.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: 00-introduction.md  01-requirements.md  02-constraints.md  03-context.md  04-solution-strategy.md  05-building-block.md  06-runtime.md  07-deployment.md  08-crosscutting.md  09-architecture-decisions.md  10-quality-requirements.md  11-risks-debt.md  12-glossary.md  13-references.md  14-figures.md  15-appendices.md  16-conclusion.md  17-ideas-roadmap.md  18-future-work.md  README.md
docs/stitch_car_pc/aether_drive/: DESIGN.md
docs/stitch_car_pc/carnine_car_settings_1024x600/: code.html
docs/stitch_car_pc/carnine_dashboard_1024x600/: code.html
docs/stitch_car_pc/carnine_media_player_1024x600/: code.html
docs/stitch_car_pc/carnine_navigation_1024x600/: code.html
docs/stitch_car_pc/carnine_r_ckfahrkamera_1024x600/: code.html
resources/sounds/: README.md
src/backend/: AGENTS.md  Cargo.toml  README.md  build.rs
src/backend/src/: main.rs
src/frontend/: AGENTS.md  README.md  pubspec.yaml
src/frontend/lib/: carnine.proto  main.dart
src/frontend/lib/app/: app_theme.dart  carnine_app.dart
src/frontend/lib/l10n/: app_language_controller.dart  app_language_option.dart  app_localizations.dart
src/frontend/lib/lib/: carnine.pb.dart  (+3 more)
src/frontend/linux/: CMakeLists.txt
src/frontend/test/: widget_test.dart
(+16 files in other folders)
