[package]
name = "carnine-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
